<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
<RelativeLayout
    android:id="@+id/activity_country"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.krishnaprasad.assignment2.CountryActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_a_country"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:gravity="center"/>
    <fragment
        android:id="@+id/fragment1"
        android:name="com.krishnaprasad.assignment2.MyListFragment"
        android:layout_marginTop="29dp"
        android:layout_width="match_parent"
        android:layout_height="271dp"
        tools:layout="@layout/list_fragment"
        />

    <TextView
        android:text="@string/state_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="38dp"
        android:id="@+id/stateText"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:layout_marginEnd="13dp"
        android:id="@+id/editText"
        tools:ignore="LabelFor"
        android:layout_below="@+id/fragment1"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/countryclearbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stateText"
        android:layout_alignStart="@+id/stateText"
        android:layout_marginStart="15dp"
        android:layout_marginTop="37dp"
        android:id="@+id/countrybutton1" />

    <Button
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/countrybutton1"
        android:layout_toEndOf="@+id/countrybutton1"
        android:layout_marginStart="47dp"
        android:id="@+id/countrybutton2" />

</RelativeLayout>
    </ScrollView>

