<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        >
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/first_name"
                android:textSize="22sp"
                android:textColor="@android:color/black"
                android:id="@+id/fnameView"
                />
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="text|textCapWords"
                android:ems="10"
                android:id="@+id/fnameText"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:ignore="LabelFor">
                <requestFocus/>
                </EditText>


        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/last_name"
                android:textSize="22sp"
                android:textColor="@android:color/black"
                android:id="@+id/lnameView" />

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="text|textCapWords"
                android:ems="10"
                android:id="@+id/lnameText"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:ignore="LabelFor">
            </EditText>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/age"
                android:textSize="22sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="phone"
                android:id="@+id/AgeText"
                android:textSize="20sp"
                android:maxLength="3"
                android:layout_marginStart="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:ignore="LabelFor">
            </EditText>

        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/email"
                android:textSize="22sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/EmailText"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:ignore="LabelFor">
            </EditText>

        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/phone"
                android:textSize="22sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="phone"
                android:id="@+id/PhoneText"
                android:textSize="20sp"
                android:maxLength="10"
                android:layout_marginStart="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:ignore="LabelFor">
            </EditText>

        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/birth_date"
                android:textSize="22sp"
                android:textColor="@android:color/black"/>


        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType=""
            android:id="@+id/BirthText"
            android:textSize="20sp"
            android:ems="8"
            android:hint="@string/mm_dd_yyyy"
            android:layout_marginStart="75dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:ignore="LabelFor">
        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="end"
            android:text="@string/set"
            android:textAlignment="center"
            android:textSize="24sp"
            android:inputType="none"
            android:id="@+id/dateSet" />
    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        >
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/country"
            android:textSize="22sp"
            android:textColor="@android:color/black"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="text"
            android:id="@+id/CountryText"
            android:textSize="20sp"
            android:ems="10"
            android:layout_marginStart="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:ignore="LabelFor">
        </EditText>
    </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/state"
                android:textSize="22sp"
                android:textColor="@android:color/black"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="text"
                android:id="@+id/stateText"
                android:textSize="20sp"
                android:ems="10"
                android:layout_marginStart="32dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:ignore="LabelFor">
            </EditText>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end">
        <Button
            android:text="@string/set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="24sp"
            android:id="@+id/CountrySet" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
    <Button
        android:text="@string/done_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:textSize="24sp"
        android:id="@+id/buttonDone" />
    </LinearLayout>
</LinearLayout>
</ScrollView>